--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
         android:theme="@style/Theme.ParkingMapApp"
         tools:targetApi="31">
         <activity
+            android:name=".DeleteAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EmailChangeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PasswordChangeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ParkingInfoActivity"
             android:exported="false" />
         <activity
