Add booking ticket project after payment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation libs.stripe.android
     implementation libs.retrofit
     implementation libs.converter.gson
+    implementation libs.zxing.android.embedded
 }
