--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".AdminPanelActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VerifyChangesActivity"
+            android:exported="false" />
+        <activity
             android:name=".InfoProfileActivity"
             android:exported="false" />
         <activity
